# Harmonator

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  harmonator.cxx  harmonator.h  harmonator.html  harmonator_ui.fl  midiclock.fl  music_clock.cxx  music_clock.h
samples/: 2bt-00.hcf  3bt-00.hcf  3bt-01.hcf  4bt-00.hcf  4bt-01.hcf  5bt-00.hcf  5bt-01.hcf  6bt-00.hcf  7bt-00.hcf
samples/CVS/: Entries  Repository  Tag
